k8s/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: malvados-<ENV>-api
spec:
  selector:
    matchLabels:
      app: malvados-<ENV>-api
  template:
    metadata:
      labels:
        app: malvados-<ENV>-api
    spec:
      containers:
        - name: api
          image: myhro/malvados:<VERSION>
          command:
            - /app/api
          ports:
            - containerPort: 8080
