k8s/api/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: malvados-<ENV>-api-tunnel
spec:
  selector:
    matchLabels:
      app: malvados-<ENV>-api-tunnel
  serviceName: malvados-<ENV>-api-tunnel
  template:
    metadata:
      labels:
        app: malvados-<ENV>-api-tunnel
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2020.10.0
          command:
            - cloudflared
            - tunnel
            - run
            - <TUNNEL>
          volumeMounts:
            - mountPath: /etc/cloudflared
              name: cloudflared
      volumes:
        - name: cloudflared
          secret:
            secretName: malvados-<ENV>-api-tunnel
